-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.451 2009-03-24 01:59:01 guru Exp $
-----------------------------------------------------------------------------------------
	
2009-03-23	pwessel
	* triangulate.c:	New option -Q to generate Voronoi polygon edges.
	* gmt_support.c:	Rely on Shewchuk's triangle function to get Voronoi output.
2009-03-18	pwessel
	* gmt_support.c		Enabled GMT_intpol to handle NaNs by treating them as segment
				boundaries.
	* gmt_init.c:		New Default setting NAN_RECORDS = skip|pass [skip].
				If "pass" we treat let the programs handle the NaNs; for some
				programs the NaNs in input record will act as indicators of
				data gaps for continuous lines.  If "skip" we report them
				as bad records.  In both cases the records are skipped.
	* mgd77/mgd77manage.c:	Now honors NAN_RECORDS in tables given to -A.

	2009-03-18	jluis
	* mgd77/mgd77.c		Was failing to read Windows terminated ASCII files

2009-03-15	pwessel
	* grdgradient.c:	For geographic grids, make sure N and S pole only has
				a single value on output.
2009-03-14	pwessel
	* x2sys/x2sys_init.c:	Now properly copies the *.def file to the TAG dir.
	* x2sys/x2sys_cross.c:	Removed the -F option which was not honored anyway.
	* x2sys/x2sys.c:	Use the TAG_paths.txt file to get directories for gmt files
				before looking in old share/mgg.
	* mgd77/mgd77convert.c:	Allow users to give file.ext on command line.
	
2009-03-14	jluis
	* gmt_io.{c,h}:		Created GMT_fgetc & GMT_ungetc to use with mgd77 supplements.
	* mgd77/mgd77.c		Now works on Windows (but still crashes if use -L option) 
	* x2sys/x2sys_put.c	Fixed -D option (was falling in a endless loop)

2009-03-12	remko
	* gmt_nc.c, gmt_grd.h:	Properly handle netCDF that have LatLon = 0, 1: flip x and y.

2009-03-09	pwessel
	* grdmath.c:		The PDIST operator did not handle binary input files (as LDIST does).

2009-03-08	jluis