@@ -1,0 +1,12 @@
+#	$Id: Supplements.HOWTO,v 1.1 2009-03-24 23:06:38 guru Exp $
+
+This document discusses what you need to do in order to add a new supplement to GMT.
+
+1. Model the naming and layout of your supplement directory after the existing practices.
+   In particular, use GNUmakefile to do things specific for gurus (like getting or preparing
+   some of the files, and use makefile to handle just the files distributed with GMT).
+2. Add the list of distributed files to guru/GMT_suppl.lis
+3. Add the new supplement option to guru/install_gmt and modify website/install_gmt_form.pl
+   and website/gmt_install_form.html
+4. Add the supplement nake to SUPPL and SUPPL_M in the main GMT Makefile.
+5. Add info to doc/GMT_Appendix_A.txt.
